footer text and link adjusted

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="text-center border-t p-4 text-sm text-default-light">
-    <p>Content generated at <span class="text-primary">{{ now.Format "02 Jan 2006 15:04:05 MST" }}</span></p>          
+    <p class="text-xs">generated using the <a class="hidden-link" href="https://github.com/mrBrutus/hugo-plc-docs-theme">PLC docs theme</a> at {{ now.Format "02 Jan 2006 15:04" }}</p>          
 </footer>
 
 
