--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,6 +14,10 @@ html, body {
   @apply my-0 !important;
 }
 
+.hidden-link {
+  @apply no-underline !important;
+}
+
 /* ============================================================================
  * color schemes
  * ========================================================================= */
