--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -73,12 +73,12 @@ kbd {
  * sidebar
  * ========================================================================= */
 
-.sb-btn {
-  @apply flex-grow flex items-start;
-  @apply p-4 min-h-12;
+.sidebar-item {
+  @apply flex-grow flex items-center;
+  @apply py-4 pr-4 min-h-12;
 }
 
-.sb-btn.active {
+.sidebar-item.active {
   @apply font-semibold;
 }
 
@@ -160,24 +160,8 @@ kbd {
  * mobile menu
  * ========================================================================= */
 
-#overlay {
-  @apply fixed inset-0 top-16 z-20;
-  @apply bg-black opacity-0 invisible;
-  @apply cursor-pointer;
-  @apply transition-all duration-300;
-  @apply print:hidden;
-}
-
 #overlay.show {
   @apply opacity-60 visible;
-}
-
-#sidebar {
-  @apply bg-background fixed h-full overflow-auto overflow-x-hidden z-30;
-  @apply overflow-y-scroll border-t md:border-none top-16 left-0 w-5/6 md:w-80 xl:w-96;
-  @apply transition-all duration-300;
-  @apply transform -translate-x-full md:translate-x-0;
-  @apply print:hidden;
 }
 
 #sidebar.show {
