--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,8 +16,7 @@
   <div>
     {{ partial "nav/main" . }}
     <section class="md:ml-80 xl:ml-96">
-      <div class="pt-32 pb-16 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
-      {{/* <div class="bg-red-200 flex justify-between pt-32 pb-16 md:mx-auto px-4 lg:px-20 xl:px-20  prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose"> */}}
+      <div class="pt-32 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
         <main class="min-h-screen">
           {{ block "main" . }}{{ end }}
           {{/* {{ partial "footer/page-footer.html" . }} */}}
