--- a/layouts/partials/nav/sidebar/item.html
+++ b/layouts/partials/nav/sidebar/item.html
@@ -7,10 +7,10 @@
 {{ $collapse := .collapse }}
 {{ $debugColor := .debugColor }}
 
-<div class="flex justify-between {{ $padding }}">
-  <a href="{{ $url }}" class="sb-btn" {{ if $collapse }} data-toggle="collapse" {{ end }}> 
-    <span class="{{ with $ctx.Param `debug` }}{{ $debugColor }}{{ end }} flex-none mr-2 w-6 h-6"></span>
-    <span class="mr-2">{{ $title }}</span>
+<div class="flex justify-between">
+  <a href="{{ $url }}" class="sidebar-item" {{ if $collapse }} data-toggle="collapse" {{ end }}> 
+    <span class="{{ with $ctx.Param `debug` }}{{ $debugColor }}{{ end }} flex-none mr-2 w-2 h-6"></span>
+    <span class="{{ $padding }} mr-2">{{ $title }}</span>
   </a>
   {{if $branchSelector }}
     {{ partial "nav/sidebar/branch-selector.html" (dict 
