--- a/layouts/partials/nav/sidebar/main.html
+++ b/layouts/partials/nav/sidebar/main.html
@@ -1,17 +1,23 @@
 {{/* overlay for mobile menu */}}
-<div id="overlay"></div>
+<div id="overlay" class="fixed inset-0 top-16 z-20 bg-black opacity-0 invisible cursor-pointer transition-all duration-300 print:hidden"></div>
 
-<aside id="sidebar">
+<aside id="sidebar" class="pb-16 bg-background fixed overflow-auto overflow-x-hidden z-30 overflow-y-scroll border-t md:border-none top-16 bottom-0 left-0 w-5/6 md:w-80 xl:w-96 transition-all duration-300 transform -translate-x-full md:translate-x-0 print:hidden">
+
   <div class="min-h-16 p-4 flex flex-col space-y-2 items-end border-b">
     {{/* theme switch */}}
     {{ partial "nav/toggle-switch.html" (dict "id" "theme-switch" "text" "Dark theme") }}
   </div>
-  <div class="mb-32">
+
+  <div class="">
     {{/* sidebar always build from the root level */}}
     {{ with .Site.GetPage "/" }}
       {{ range .Pages }}
         {{ partial "nav/sidebar/sidebar.html" (dict "ctx" . "depth" 0 "Page" $.Page ) }}
       {{ end }}
     {{ end }}
-  </div>                  
+
+    {{ partial "taxonomy/taxonomy-tags" . }}
+    {{ partial "taxonomy/taxonomy-categories" . }}
+  </div>
+
 </aside>
