--- a/layouts/partials/footer/page-footer.html
+++ b/layouts/partials/footer/page-footer.html
@@ -1,3 +1,3 @@
-<footer class="text-center border-t p-4 text-sm text-default-light">
-  <p class="text-xs">generated using the <a class="hidden-link" href="https://github.com/mrBrutus/hugo-plc-docs-theme">PLC docs theme</a> at {{ now.Format "02 Jan 2006 15:04" }}</p>          
+<footer class="text-center border-t p-4 text-xs text-default-light">
+  <p class="">{{ now.Format "02 Jan 2006 15:04" }} - created using <a class="low-profile-link" href="https://gohugo.io">Hugo</a> and the <a class="low-profile-link" href="https://github.com/mrBrutus/hugo-plc-docs-theme">PLC docs theme</a> </p>          
 </footer>
