--- a/layouts/partials/body/infos.html
+++ b/layouts/partials/body/infos.html
@@ -1,29 +1,33 @@
-<div class="flex items-center flex-wrap mr-2 text-xs">
+{{ if not ( or ( eq ($.Param "layout") "lib-type" ) (eq ($.Param "layout") "lib-function" ) (eq ($.Param "layout") "lib-common-data" )) }}
+  <div class="flex items-center flex-wrap mr-2 text-xs">
 
-  {{ with .Params.Date }}
-    <time class="py-0.5 flex items-center mr-2" title="created">
-      {{ partial "svgs/heroicons/calendar.svg" (dict "class" "h-4 mr-1" ) }}    
-      {{ $.Date.Format "02 Jan 2006" }} 
-    </time>
-  {{ end }}
+    {{ with .Params.Date }}
+      <time class="py-0.5 flex items-center mr-2" title="created">
+        {{ partial "svgs/heroicons/calendar.svg" (dict "class" "h-4 mr-1" ) }}
+        {{ $.Date.Format "02 Jan 2006" }}
+      </time>
+    {{ end }}
 
-  {{ if ne (.Date.Format "02 Jan 2006") (.Lastmod.Format "02 Jan 2006") }}
-    <time class="py-0.5 flex items-center mr-2" title="last edit">
-      {{ partial "svgs/heroicons/pencil.svg" (dict "class" "h-4 mr-1" ) }}    
-      {{ .Lastmod.Format "02 Jan 2006" }}
-    </time>
-  {{ end }}
-  
-  <span class="py-0.5 flex items-center mr-2 print:hidden" title="reading time"> 
-    {{ partial "svgs/heroicons/clock.svg" (dict "class" "h-4 mr-1" ) }}    
-    {{ printf "%v minutes" .ReadingTime }}
-  </span>
-  
-  {{ with .Params.Author }}
-    <span class="py-0.5 flex items-center mr-2" title="author">
-      {{ partial "svgs/heroicons/user.svg" (dict "class" "h-4 mr-1" ) }}    
-      {{ . }}
-    </span>
-  {{ end }}
+    {{ if ne (.Date.Format "02 Jan 2006") (.Lastmod.Format "02 Jan 2006") }}
+      <time class="py-0.5 flex items-center mr-2" title="last edit">
+        {{ partial "svgs/heroicons/pencil.svg" (dict "class" "h-4 mr-1" ) }}
+        {{ .Lastmod.Format "02 Jan 2006" }}
+      </time>
+    {{ end }}
 
-</div>
+    {{ if gt .ReadingTime 1 }}
+      <span class="py-0.5 flex items-center mr-2 print:hidden" title="reading time">
+        {{ partial "svgs/heroicons/clock.svg" (dict "class" "h-4 mr-1" ) }}
+        {{ printf "%v minutes" .ReadingTime }}
+      </span>
+    {{ end }}
+
+    {{ with .Params.Author }}
+      <span class="py-0.5 flex items-center mr-2" title="author">
+        {{ partial "svgs/heroicons/user.svg" (dict "class" "h-4 mr-1" ) }}
+        {{ . }}
+      </span>
+    {{ end }}
+
+  </div>
+{{ end }}
