--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -15,7 +15,7 @@
             {{ .Content }}
           </article>
 
-          <div class="">
+          <div class="flex flex-wrap">
             {{/* {{ range .Paginator.Pages.ByWeight }} */}}
             {{ range .Pages.ByWeight }}            
               {{ .Render "summary" }}
