--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -77,11 +77,11 @@ kbd {
 
 .sidebar-item {
   @apply flex-grow flex items-center;
-  @apply py-4 pr-4 min-h-12;
+  @apply py-4 md:py-2 pr-4 min-h-12 md:min-h-8;
 }
 
 .sidebar-item.active {
-  @apply font-semibold;
+  @apply bg-default-soft;
 }
 
 .collapse {
