--- a/layouts/partials/lib/common-data/index.html
+++ b/layouts/partials/lib/common-data/index.html
@@ -31,7 +31,7 @@
 {{ if not $.ctx.Params.disable_changelog }}
   {{ with .Page.changelog }}
     <div>
-      {{ partial "parse-changelog.html" . }}
+      {{ partial "lib/changelog.html" . }}
     </div>
   {{ end }}
 {{ end }}
