--- a/layouts/partials/lib/infos.html
+++ b/layouts/partials/lib/infos.html
@@ -13,7 +13,14 @@
       {{ with .date }}
         <time class="py-0.5 flex items-center mr-2" title="last edit">
           {{ partial "svgs/heroicons/pencil.svg" (dict "class" "h-4 mr-1" ) }}
-          {{ dateFormat "02 Jan 2006" . }}
+
+          {{ if or (eq ( . | lower) "unreleased" (eq ( . | lower) "draft"))  }}
+            <span class="text-primary">
+              unreleased
+            </span>
+          {{ else }}
+            {{ dateFormat "02 Jan 2006" . }}
+          {{ end }}
         </time>
       {{ end }}
 
